--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,13 @@
 <h1><%= @cocktail.name %></h1>
 <h2>Ingredients</h2>
+<%= link_to "+", new_cocktail_dose_path(@cocktail), class: "btn btn-secondary rounded" %>
 <ul>
   <% @cocktail.doses.each do |dose| %>
     <li>
       <strong><%= dose.description%></strong>
       <%= dose.ingredient.name %>
+      <%= link_to raw('<i class="fa fa-trash" aria-hidden="true"></i>
+'),  cocktail_dose_path(@cocktail, dose), method: :delete, data: { confirm: "Are you sure to delete #{dose.ingredient.name}?"} %>
     </li>
   <% end %>
 </ul>
