--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -2,6 +2,6 @@
 
 <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.input :description %>
-  <%= f.input :ingredient, collection: Ingredient.all.order(:name), prompt: "Choose an Ingredient"%>
+  <%= f.association :ingredient, collection: Ingredient.all.order(:name), prompt: "Choose an Ingredient"%>
   <%= f.submit "Add a dose", class: "btn btn-warning" %>
 <% end %>
